# ear-api

./: README.md  pyproject.toml
app/: main.py
app/api/: router.py
app/api/authentication/: login.py  login_model.py
app/core/: events.py
app/core/db/: sqlite.py
app/core/settings/: app.py  development.py  test.py
