[tool.poetry]
name = "ear-api"
version = "0.1.0"
description = ""
authors = ["Renato A. Ferreira <renatoferreirarenatoferreira@hotmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
uvicorn = "^0.16.0"
fastapi = "^0.70.1"
loguru = "^0.5.3"
pydantic = {extras = ["email"], version = "^1.8.2"}

[tool.poetry.dev-dependencies]
flake8 = "^4.0.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
